Fix the case where the chat box ends up under the game on small screens

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -33,7 +33,7 @@ button { padding: 10px; cursor: pointer; margin: 10px; }
 .landlord .card { background: #ddd }
 .player { border: 1px #000 solid; padding: 10px; }
 .chat { min-width: 225px; width: 20%; padding: 10px; border: 1px #000 solid; float: right; margin-top: 20px; }
-.game { min-width: 700px; min-height: 660px; width: 70%; display: inline-block; }
+.game { min-width: 690px; min-height: 660px; width: 70%; display: inline-block; }
 .messages { height: 400px; overflow-y: scroll; overflow-anchor: none; }
 .chat-anchor { overflow-anchor: auto; height: 1px }
 .message { margin: 0; }
